<resources>
    <string name="app_name">ToDoHerissePierre</string>
    <string name="title_activity_task">task</string>
    <string name="task_title_text"> </string>
    <string name="task_description_text"> </string>
    <string name="validate">Validate</string>
    <string name="hint_description">Enter a description...</string>
    <string name="hint_title">Enter a title...</string>
    <string name="button_delete_description">Button to delete task</string>
    <string name="button_edit_description">Button to edit task</string>
    <string name="edit_button_text">Edit</string>
    <string name="list_title">List</string>
</resources>
